checker/tests/command-line/issue618/expected.txt
TwoCheckers.java:28: error: [argument] incompatible argument for parameter b of requiresUntainted.
    requiresUntainted(a);
                      ^
  found   : @Tainted String
  required: @Untainted String
1 error
